# ironclad

./: Cargo.toml  README.md  TODO  flake.nix
crates/ironclad-cli/: Cargo.toml
crates/ironclad-cli/src/: batch_origin.rs  config.rs  context.rs  helper.rs  logging.rs  main.rs  output.rs  reuse_cell.rs  reuse_fact.rs  reuse_node.rs
crates/ironclad-cli/src/args/: mod.rs
crates/ironclad-cli/src/args/ack/: mod.rs
crates/ironclad-cli/src/args/apply/: mod.rs
crates/ironclad-cli/src/args/audit/: mod.rs
crates/ironclad-cli/src/args/catalog/: init.rs  mod.rs
crates/ironclad-cli/src/args/cell/: add.rs  edit.rs  list.rs  mod.rs  remove.rs  reuse.rs  show.rs
crates/ironclad-cli/src/args/check/: mod.rs
crates/ironclad-cli/src/args/cluster/: init.rs  mod.rs
crates/ironclad-cli/src/args/dependency/: add.rs  list.rs  mod.rs  remove.rs
crates/ironclad-cli/src/args/diff/: mod.rs
crates/ironclad-cli/src/args/fact/: add.rs  edit.rs  list.rs  mod.rs  (+4 more)
crates/ironclad-cli/src/commands/: mod.rs
crates/ironclad-cli/tests/: cli.rs
crates/ironclad-ops/: Cargo.toml
crates/ironclad-ops/src/: fragment_error.rs  lib.rs  text_selector.rs
crates/ironclad-ops/src/ops/: compact.rs  head_file_text.rs  head_net_http.rs  head_run.rs  html_attribute.rs  html_find.rs  html_inner_html.rs  html_inner_text.rs  json_find.rs  mod.rs  run.rs  seed_file_text.rs  seed_net_http.rs  seed_run.rs  slice.rs  text_find.rs  text_lines.rs  text_replace.rs  text_split.rs  text_tag.rs  text_trim.rs  trim.rs
crates/ironclad-ops/src/tag/: parser.rs  selection.rs  selection_boundary.rs  tag.rs
(+267 files in other folders)
