[package]
name = "ironclad-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ic"
path = "src/main.rs"

[dependencies]
ironclad-core = { path = "../ironclad-core" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
env_logger = "0.11.8"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
humantime = "2.3.0"
console = "0.16.2"
ironclad-ops = { version = "0.1.0", path = "../ironclad-ops" }
figment = { version = "0.10.19", features = ["env", "json"] }
clap-stdin = "0.8.1"
