[package]
name = "ironclad-ops"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
chumsky = "0.12.0"
glob = "0.3.3"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["blocking"] }
ironclad-core = { version = "0.1.0", path = "../ironclad-core" }
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_regex = "1.1.0"
thiserror = "2"
